Create initial commit

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,73 @@ div {
   padding: .5rem;
   text-align: center;
 }
+
+body {
+
+}
+
+div {
+  padding: .525em .8em;
+  text-align: center;
+}
+
+.btn {
+  font-size: 1.125rem;
+  color: white;
+  background-color: #333;
+  padding: .525em .8em;
+  border-radius: 8px;
+  display: inline-block;
+  border: 3px solid black;
+  text-decoration: none;
+  border-width: inherit;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
+
+.btn-big {
+  color: green;
+  background-color: #fff;
+  padding: 1em;
+  border-radius: 10px;
+  display: inline-block;
+  border: 2em;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+
+.btn-subtle {
+  color: white;
+  background-color: #ccc;
+  padding: .725em 1.3em;
+  border-radius: 8px;
+  display: inline-block;
+  border: none;
+  text-decoration: none;
+}
+
+.btn-ghost {
+  color: black;
+  background-color: #fff;
+  padding: .48em .95em;
+  border-radius: 8px;
+  display: inline-block;
+  border: 3px solid black;
+  text-decoration: none;
+}
+
+.btn-warning {
+  color: white;
+  background-color: #f33;
+  padding: .5em 1em;
+  border-radius: 8px;
+  display: inline-block;
+  border: solid;
+  text-decoration: none;
+}
+
+.btn:hover {
+
+}
